--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6.10",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.4",
+    "scss": "^0.2.4",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
