--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.63.4",
     "scss": "^0.2.4",
+    "socket.io-client": "^4.7.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
